# mahalo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/: bench.md
bench/: .gitignore  Cargo.toml  bench.sh  run.sh
bench/frameworks/elixir/: mix.exs
bench/frameworks/elixir/lib/: bench_phoenix.ex
bench/frameworks/ferron/: ferron.kdl
bench/frameworks/node/: express.js  fastify.js  package-lock.json  package.json
bench/frameworks/python/: app.py  requirements.txt
bench/frameworks/ruby/: Gemfile  config.ru  rails_app.ru
bench/src/: shared.rs
crates/cargo-mahalo/: Cargo.toml
crates/cargo-mahalo/src/: main.rs
crates/cargo-mahalo/src/commands/: generate.rs  mod.rs  new.rs
crates/cargo-mahalo/src/templates/: channel.rs  controller.rs  mod.rs  project.rs
crates/mahalo/: Cargo.toml
crates/mahalo-channel/: Cargo.toml
crates/mahalo-channel/src/: channel.rs  lib.rs  socket.rs  supervisor.rs
crates/mahalo-cluster/: Cargo.toml
crates/mahalo-cluster/src/: cluster.rs  lib.rs  topology.rs
crates/mahalo-core/: Cargo.toml
crates/mahalo-core/src/: conn.rs  controller.rs  lib.rs  pipeline.rs  plug.rs
crates/mahalo-endpoint/: Cargo.toml
crates/mahalo-endpoint/src/: application.rs  date.rs  endpoint.rs  handler.rs  http_parse.rs  lib.rs  server.rs  tcp_server.rs  uring.rs  worker.rs  ws_parse.rs
crates/mahalo-plug/: Cargo.toml
crates/mahalo-plug/src/: csrf.rs  etag.rs  lib.rs  logger.rs  request_id.rs  secure_headers.rs  static_files.rs
crates/mahalo-presence/: Cargo.toml
crates/mahalo-presence/src/: lib.rs  presence.rs  tracker.rs
crates/mahalo-pubsub/: Cargo.toml
crates/mahalo-pubsub/src/: bridge.rs  lib.rs  pubsub.rs
crates/mahalo-router/: Cargo.toml
crates/mahalo-router/src/: lib.rs  router.rs
crates/mahalo-sse/: Cargo.toml
crates/mahalo-sse/src/: lib.rs
crates/mahalo-telemetry/: Cargo.toml
crates/mahalo-telemetry/src/: lib.rs  telemetry.rs
crates/mahalo-test-app/: Cargo.toml  README.md
crates/mahalo-test-app/src/: main.rs
crates/mahalo-test-app/static/css/: style.css
crates/mahalo-test-app/static/js/: app.js
crates/mahalo-test-app/templates/: about.html  base.html  flavor.html  home.html  menu.html  order.html  order_status.html
crates/mahalo/src/: lib.rs
docs/: architecture.md  benchmark.md  channels.md  conn.md  plugs.md  pubsub.md  quick-start.md  routing.md  telemetry.md
lore/: 20260304-1400-harden-review.md  20260304-1740-harden-bench-suite.md  20260305-0505-harden-test-app.md  20260305-1148-harden-genserver-integration.md  20260306-0440-harden-iouring-migration.md  20260306-1200-harden-ferron-optimizations.md  20260306-1400-websocket-hardening.md  20260306-1516-harden-cross-platform.md  20260306-1700-harden-websocket-uring.md  20260306-1800-harden-perf-optimizations.md  20260306-1800-iouring-enhancement-analysis.md  20260306-1800-vite-ssr-perf-analysis.md  20260306-1900-harden-bench-suite.md  20260306-2100-rebar-sqlite-embedded-docdb.md  20260307-0630-monoio-thread-per-core-migration.md  20260307-1250-harden-turbine-zero-copy.md  20260307-1800-turbine-zero-copy-integration.md  20260308-1200-tls-architecture-decision.md  20260308-1500-harden-sse-price-stream.md
