[workspace]
resolver = "2"
members = [
    "crates/mahalo-core",
    "crates/mahalo-router",
    "crates/mahalo-endpoint",
    "crates/mahalo-pubsub",
    "crates/mahalo-channel",
    "crates/mahalo-telemetry",
    "crates/mahalo-plug",
    "crates/mahalo-cluster",
    "crates/mahalo-presence",
    "crates/mahalo",
    "crates/cargo-mahalo",
    "crates/mahalo-test-app",
    "bench",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
rebar-core = { git = "https://github.com/johnnyshields/rebar.git", branch = "rebar-v2" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
base64 = "0.22"
tera = "1"
rmpv = "1"
matchit = "0.8"
io-uring = "0.7"
httparse = "1"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["sched", "net"] }
libc = "0.2"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
itoa = "1"
httpdate = "1"
blake3 = "1"
mimalloc = "0.1"
smallvec = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
