[package]
name = "mahalo-bench"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "bench-mahalo"
path = "src/bin/mahalo.rs"

[[bin]]
name = "bench-axum"
path = "src/bin/axum_raw.rs"

[[bin]]
name = "bench-actix"
path = "src/bin/actix.rs"

[[bin]]
name = "bench-xitca"
path = "src/bin/xitca.rs"

[[bin]]
name = "bench-hyper"
path = "src/bin/hyper.rs"

[dependencies]
mahalo = { path = "../crates/mahalo" }
rebar-core.workspace = true
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
actix-web = "4"
mimalloc.workspace = true
rand.workspace = true
itoa.workspace = true
xitca-web = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
