[package]
name = "mahalo-channel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Phoenix-style WebSocket Channels with rebar process per connection"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
rebar-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.26"
