[package]
name = "mahalo-channel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Phoenix-style WebSocket Channels with rebar process per connection"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
rebar-core = { workspace = true }
local-sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rmpv = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
