[package]
name = "mahalo-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rebar-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
mahalo-pubsub = { path = "../mahalo-pubsub" }
