[package]
name = "mahalo-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rebar-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
mahalo-pubsub = { path = "../mahalo-pubsub" }
