[package]
name = "mahalo-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core abstractions for Mahalo: Conn, Plug, Pipeline, Controller"

[dependencies]
rebar-core = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
percent-encoding = "2"
smallvec = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
