[package]
name = "mahalo-endpoint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "io_uring HTTP server and supervised lifecycle for Mahalo"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-router = { path = "../mahalo-router" }
mahalo-channel = { path = "../mahalo-channel" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
rebar-core = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
io-uring = { workspace = true }
httparse = { workspace = true }
socket2 = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
futures = { workspace = true }
itoa = { workspace = true }
httpdate = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
