[package]
name = "mahalo-endpoint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HTTP server and supervised lifecycle for Mahalo"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-router = { path = "../mahalo-router" }
mahalo-channel = { path = "../mahalo-channel" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
rebar-core = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
httparse = { workspace = true }
socket2 = { workspace = true }
futures = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
rmpv = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
