[package]
name = "mahalo-endpoint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HTTP server and supervised lifecycle for Mahalo"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-router = { path = "../mahalo-router" }
mahalo-channel = { path = "../mahalo-channel" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
rebar-core = { workspace = true }
turbine-core = { workspace = true }
local-sync = { workspace = true }
crossbeam-channel = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
httparse = { workspace = true }
socket2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
httpdate = { workspace = true }
itoa = { workspace = true }
serde_json = { workspace = true }
rmpv = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
