[package]
name = "mahalo-sse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Server-Sent Events (SSE) support for Mahalo"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
local-sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
