[package]
name = "mahalo-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Telemetry events via rebar EventBus for Mahalo"

[dependencies]
rebar-core = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
