[package]
name = "mahalo-test-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ice cream store demo app showcasing all Mahalo framework features"

[[bin]]
name = "ice-cream-store"
path = "src/main.rs"

[dependencies]
mahalo = { path = "../mahalo" }
rebar-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tera = { workspace = true }
