[package]
name = "mahalo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A Phoenix-like web framework for Rust, built on rebar"

[dependencies]
mahalo-core = { path = "../mahalo-core" }
mahalo-router = { path = "../mahalo-router" }
mahalo-endpoint = { path = "../mahalo-endpoint" }
mahalo-pubsub = { path = "../mahalo-pubsub" }
mahalo-channel = { path = "../mahalo-channel" }
mahalo-telemetry = { path = "../mahalo-telemetry" }
mahalo-plug = { path = "../mahalo-plug" }
mahalo-sse = { path = "../mahalo-sse" }
mahalo-cluster = { path = "../mahalo-cluster" }
mahalo-presence = { path = "../mahalo-presence" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
